--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,12 @@
 {
     "domain": "maya_knox",
     "name": "Maya Knox Security",
-    "codeowners": [
-        "@hipercube"
-    ],
-    "documentation": "https://hipermaya.com.br",
+    "version": "1.1.0",
+    "documentation": "https://www.hipermaya.com.br",
     "dependencies": [],
+    "codeowners": [
+        "Klaus Quirino Terra"
+    ],
     "config_flow": true,
-    "integration_type": "hub",
-    "iot_class": "local_push",
-    "icon": "mdi:robot",
-    "version": "1.0.4"
+    "iot_class": "local_push"
 }
